2006-02-14 14:40 Mike Park  <mike.park@nasa.gov>

	* src/intersect.c (intersectSegmentSegment) test the intersection
	of two lines.

2006-02-14 11:55 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridCollapseWedgeCells) renamed from
	gridCollapseSlivers.

2006-02-13 19:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) added a
	recursive_depth arg to allow allow untangling to relax faces that
	are currently tight constraints.

2006-02-11 12:37 Mike Park  <mike.park@nasa.gov>

	* src/intersect.c (intersectTriangleSegment) exposed the ratio of
	intersection.

2006-02-10 13:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitVolumeEdgesIntersectingFacesAround)
	split volume cells with faces near node to help localize
	projection.
	* src/gridinsert.c (gridCollapseSlivers) remove slivers with
	collapse to aid untangling.

2006-02-10 13:21 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) exclude
	elements with very small opposite sides, they will be addressed on
	the next pass.

2006-02-10 11:40 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleVolume) expect outward facing normals.

2006-02-10 10:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV) to account for cad models
	that have CADGeom_ReversedSurfaceNormal, the uv of the face are
	not right handed.

2006-02-10  8:49 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotNodeOrbit) added to dump out cells
	surrounding a node.

2006-02-09 16:20 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauInit) got rid of big-M cost on auxillary,
	they are driven out explitly.

2006-02-09 15:45 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauAuxillaryPivot) created to force auxillary
	varibles out of the basis.
	* src/tableau.c (tableauSolve) .

2006-02-09 13:41 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauLargestPivot) corrected bug in step_length,