@@ -1,3 +1,8 @@
+2006-02-14 15:49 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridSplitSliverCell) destroy sliver cells by
+	splitting then into four.
+
 2006-02-14 14:40 Mike Park  <mike.park@nasa.gov>
 
 	* src/intersect.c (intersectSegmentSegment) test the intersection
